- Views integration: fix broken query for fields retrieved through relationships when relation is empty.
- #325262 Fix flawed logic in filtering out empty values.
- #297322 Views integration: display node title / user name for argument summaries with noderef / userref fields.
- #324301 Optionwidgets: check for maximum number of values.

CCK 6.2-rc10
============

- Get rid of helper function content_is_updated(), we can do it better using the content version variable.
- #318224 by brmassa, fix several errors in Content Copy.
- #318387 Make sure old fieldgroup updates don't run if tables were never created.
- #318227 Clean up update abort logic to more clearly explain what still needs to be done, add a helper function to prevent dangerous database operations until database is updated.
- #317232 Change css file name from content.css to content-module.css to avoid namespace collisions.
- #316656 Default weight must be zero, not NULL, or form ordering will be incorrect.
- #107407 by dopry, optimization patch, do nothing in hook_form_alter() and hook_nodeapi() if there are no fields.
- #317932 Fix userreference documentation typo.

CCK 6.2-rc9
===========

- Change update instructions to recommend leaving CCK modules out of the modules folder until they're enabled.
- #317036 by hass, context-sensitive translation fixes.
- #316354 by fago, hass, fix translation issues in rules.inc files.
- #312546 by stella, code cleanup.
- #311146 by Brian294, dheffron, yched, and others, fix critical javascript problem in new Manage fields UI screen in some themes.
- #317032 by hass, code cleanup.

CCK 6.2-rc8
===========

Be sure to visit update.php after uploading this release.

- #314986 by moshe weitzman, remove hook_devel_caches(), deprecated in favor of content_flush_caches().
- Clean up inconsistencies in unsetting _error_element, sometimes not unsetting it, sometimes not testing before unsetting it causing undefined index errors.