@@ -54,6 +54,18 @@ function content_copy_menu() {
 }
 
 /**
+ * Implementation of hook_theme().
+ */
+function content_copy_theme() {
+  return array(
+    'content_copy_export_form' => array(
+      'template' => 'content_copy_export_form',
+      'arguments' => array('form' => NULL),
+    ),
+  );
+}
+
+/**
  *  A form to export field definitions.
  */
 function content_copy_export_form(&$form_state) {
@@ -63,12 +75,16 @@ function content_copy_export_form(&$form_state) {
   $form_values = isset($form_state['values']) ? $form_state['values'] : array();
   $step = isset($form_state['storage']['step']) ? $form_state['storage']['step'] + 1 : 1;
 
-  $type_name = isset($form_values['type_name']) ? $form_values['type_name'] : '';
-  $types  = content_copy_types();
-  $fields = content_copy_fields($type_name);
+  $fields = array();
+  $groups = array();
 
-  if (module_exists('fieldgroup')) {
-    $groups = content_copy_groups($type_name);
+  $type_name = isset($form_values['type_name']) ? $form_values['type_name'] : '';
+  if ($type_name) {
+    $type = content_types($type_name);
+    $fields = $type['fields'];
+    if (module_exists('fieldgroup')) {
+      $groups = fieldgroup_groups($type_name);
+    }
   }
 
   // If a content type has been selected and there are no fields or groups to select,
@@ -77,10 +93,12 @@ function content_copy_export_form(&$form_state) {
     $step = 3;
   }
 
+  $form['#step'] = $step;
   $form['#prefix'] = t('This form will process a content type and one or more fields from that type and export the settings. The export created by this process can be copied and pasted as an import into the current or any other database. The import will add the fields to into an existing content type or create a new content type that includes the selected fields.');
 
   switch ($step) {
     case 1: // Select a content type.
+      $types  = content_copy_types();
       $form['type_name'] = array(
         '#title' => t('Types'),
         '#type' => 'radios',
@@ -95,26 +113,56 @@ function content_copy_export_form(&$form_state) {
         '#type' => 'hidden',
         '#value' => $type_name,
       );
-      if (module_exists('fieldgroup') && !empty($groups)) {
-        $form['groups'] = array(
-          '#title' => t('Groups'),
-          '#type' => 'checkboxes',
-          '#multiple' => TRUE,
-          '#options' => $groups,
-          '#description' => t('Select the group definitions to export from %type.', array(
-            '%type' => node_get_types('name', $type_name)
-          )),
+
+      $form += array(
+        '#fields' => array_keys($fields),
+        '#groups' => array_keys($groups),
+      );
+
+      $fields_options = $groups_options = array();
+
+      // Fields.
+      foreach ($fields as $name => $field) {
+        $fields_options[$name] = '';
+        $weight = $field['widget']['weight'];
+        $form[$name] = array(
+          'human_name' => array('#value' => check_plain($field['widget']['label'])),
+          'field_name' => array('#value' => $field['field_name']),
+          'type' => array('#value' => $field['type']),
+          'weight' => array('#type' => 'value', '#value' => $weight),
+          'parent' => array('#type' => 'value', '#value' => ''),
+          '#row_type' => 'field',
         );
       }
       $form['fields'] = array(
-        '#title' => t('Fields'),
         '#type' => 'checkboxes',
         '#multiple' => TRUE,
-        '#options' => $fields,
-        '#description' => t('Select the field definitions to export from %type.', array(
-          '%type' => node_get_types('name', $type_name)
-        )),
+        '#options' => $fields_options,
+        '#default_value' => array_keys($fields_options),
       );
+
+      // Groups.
+      foreach ($groups as $name => $group) {
+        $groups_options[$name] = '';
+        $weight = $group['weight'];
+        $form[$name] = array(
+          'human_name' => array('#value' => check_plain($group['label'])),
+          'group_name' => array('#value' => $group['group_name']),
+          'weight' => array('#type' => 'value', '#value' => $weight),
+          '#row_type' => 'group',
+        );
+        foreach ($group['fields'] as $field_name => $field) {
+          $form[$field_name]['parent']['#value'] = $name;
+        }
+      }
+      if ($groups) {
+        $form['groups'] = array(
+          '#type' => 'checkboxes',
+          '#multiple' => TRUE,
+          '#options' => $groups_options,
+          '#default_value' => array_keys($groups_options),
+        );
+      }
       break;
 
     case 3: // Display the export macro.
@@ -280,7 +328,7 @@ function content_copy_import_form(&$form_state, $type_name = '') {
  */
 function content_copy_import_form_submit($form, &$form_state) {
   $form_values = $form_state['values'];
-  
+
   // Get the content type we are importing into.
   $type_name = $form_values['type_name'];
   $type_label = node_get_types('name', $type_name);
@@ -404,7 +452,7 @@ function content_copy_import_form_submit($form, &$form_state) {
     // Make sure the field doesn't already exist in the type.
     // If so, do nothing, fields can't be duplicated within a content type.
     $field_name   = $field['field_name'];
-      
+
     if (!empty($field['field_name']) && isset($content_info['content types'][$type_name]['fields'][$field_name])) {
       drupal_set_message(t('The imported field %field_label (%field_name) was not added to %type because that field already exists in %type.', array(
         '%field_label' => $field['label'], '%field_name' => $field_name, '%type' => $type_name)));
@@ -434,45 +482,6 @@ function content_copy_form_alter(&$form, &$form_state, $form_id) {
   if (isset($GLOBALS['content_copy']) && isset($GLOBALS['content_copy']['status']) && $GLOBALS['content_copy']['status'] == 'export' && in_array($form_id, $alter_forms)) {
     $form['#submit'][] = 'content_copy_record_macro';
   }
-}
-
-/**
- *  Get all the fields for a content type.
- */
-function content_copy_fields($type_name) {
-  $fields = array();
-  if (!$type_name) {
-    return $fields;
-  }
-  $content_info = _content_type_info();
-  foreach ($content_info['content types'][$type_name]['fields'] as $field_name => $field) {
-    // Omit fields from the export if their module is not currently installed
-    // otherwise the system will generate errors when the macro tries to execute their forms.
-    $field_types = _content_field_types();
-    $field_module = $field_types[$field['type']]['module'];
-    $widget_types = _content_widget_types();
-    $widget_module = $widget_types[$field['widget']['type']]['module'];
-
-    if (!$field['locked'] && !empty($field_module) && module_exists($field_module) && !empty($widget_module) && module_exists($widget_module)) {
-      $fields[$field_name] = $field['widget']['label'] .' ('. $field['field_name'] .')';
-    }
-  }
-  return $fields;
-}
-
-/**
- *  Get all the groups for a content type.
- */
-function content_copy_groups($type_name = '') {
-  $groups = array();
-  if (!$type_name || !module_exists('fieldgroup')) {
-    return $groups;
-  }
-  $data = fieldgroup_groups($type_name);
-  foreach ($data as $group_name => $group) {
-    $groups[$group_name] = $group['label'] .' ('. $group['group_name'] .')';
-  }
-  return $groups;
 }
 
 /**
@@ -562,4 +571,32 @@ function content_copy_get_macro() {
     }
     return $string;
   }
+}
+
+function template_preprocess_content_copy_export_form($vars) {
+  $form = &$vars['form'];
+
+  if ($form['#step'] == 2) {
+    $order = _content_overview_order($form, $form['#fields'], $form['#groups']);
+
+    $rows = array();
+    foreach ($order as $key) {
+      $element = &$form[$key];
+      $row = new stdClass();
+
+      $row->row_type = $element['#row_type'];
+      $checkbox_key = $element['#row_type'] == 'field' ? 'fields' : 'groups';
+      $row->checkbox = drupal_render($form[$checkbox_key][$key]);
+      foreach (element_children($element) as $child) {
+        $row->{$child} = drupal_render($element[$child]);
+      }
+      $row->label_class = in_array($key, $form['#groups']) ? 'label-group' : 'label-field';
+      $row->indentation = theme('indentation', isset($element['#depth']) ? $element['#depth'] : 0);
+
+      $rows[] = $row;
+    }
+    $vars['rows'] = $rows;
+  }
+
+  $vars['submit'] = drupal_render($form);
 }
