@@ -35,6 +35,7 @@ CCK 6.2-dev
 - #325262 Fix flawed logic in filtering out empty values.
 - #297322 Views integration: display node title / user name for argument summaries with noderef / userref fields.
 - #324301 Optionwidgets: check for maximum number of values.
+- #320632 Content Copy: Make fields/groups checked for export by default + display the list in an overview table.
 
 CCK 6.2-rc10
 ============
